--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,11 @@
                 <input class="mt-2 bg-blue-800 px-5 py-2 rounded-md" type="submit" value="Create task">
             </form>
         </div>
-        <div class="tasks"></div>
+        <div class="tasks p-10">
+            <div class="task w-72 px-3 py-4 rounded-md text-white bg-zinc-800">
+                <a class="text-blue-500 inline-block mt-3" href="">Read more...</a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
